--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>AlgTrainer v1</title>
+        <title>AlgTrainer</title>
     </head>
     <body class="bg-gray-900 text-white font-['Rubik']">
         <div id="root"></div>
