--- a/index.html
+++ b/index.html
@@ -11,4 +11,11 @@
     <body class="bg-gray-900 text-white font-['Rubik']">
         <div id="root"></div>
     </body>
+    <!-- Cloudflare Web Analytics -->
+    <script
+        defer
+        src="https://static.cloudflareinsights.com/beacon.min.js"
+        data-cf-beacon='{"token": "23c17e87b5fc49989006a5ecb3dc7258"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
 </html>
